--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
     
     eventos.valorEvento.push(valorTotalEvento.toFixed(2))
 
-    alert('Local: '+eventos.localEvento[eventos.]+'\n'+
+    alert('Local: '+eventos.localEvento[eventos.localEvento.length-1]+'\n'+
     'Quantidade Convidados: '+eventos.quantidadePessoas[eventos.quantidadePessoas.length-1]+'\n'+
     'Hora de Início: '+eventos.horasInicio[eventos.horasInicio.length-1] +'\n'+
     'Hora de duração: '+horasEvento +'\n'+
@@ -467,6 +467,7 @@
     inicio();
    
 }
+
 
 
 
